[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/level/levels/Credits.gd" type="Script" id=1]
[ext_resource path="res://scenes/backgrounds/ParallaxBackgroundGrassyHill.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/level/levels/CreditsScroller.gd" type="Script" id=3]
[ext_resource path="res://fonts/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/level/levels/Label2.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Credits" type="Node"]
script = ExtResource( 1 )

[node name="ParallaxBackgroundGrassyHill" parent="." instance=ExtResource( 2 )]

[node name="CreditsScroller" type="Node2D" parent="."]
script = ExtResource( 3 )
credits_file_path = "res://resources/credits.tex"

[node name="CharTimer" type="Timer" parent="CreditsScroller"]
autostart = true

[node name="Label2" type="Label" parent="CreditsScroller"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 320.0
margin_right = 480.0
margin_bottom = 779.0
rect_min_size = Vector2( 480, 320 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ADASDASDASDADA
ASDASDASD
ASDASDASDA
ASd
asda
d
asd
as
da
sd
as
da
sd
asd
a
sda
sd
as
da
sdas
da
"
align = 1
script = ExtResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="CreditsScroller/Label2"]
[connection signal="timeout" from="CreditsScroller/CharTimer" to="CreditsScroller" method="_on_CharTimer_timeout"]
[connection signal="screen_exited" from="CreditsScroller/Label2/VisibilityNotifier2D" to="CreditsScroller/Label2" method="_on_VisibilityNotifier2D_screen_exited"]
